[tool.poetry]
name = "marvel-heroes-analysis"
version = "0.1.0"
description = ""
authors = ["vladmld <vlad.moldoveanu@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
